--- a/app/admin/main.html
+++ b/app/admin/main.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
   <script type="text/javascript" src="/lib/jquery.min.js"></script>
   <script type="text/javascript" src="/lib/jquery-ui.min.js"></script>
@@ -9,32 +10,31 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap-toggle.min.css">
   <style>
-  .panel {
-    float: left;
-    margin: 10 5 5 10;
-    width: 600px;
-  }
-
-
+    .panel {
+      float: left;
+      margin: 10 5 5 10;
+      width: 600px;
+    }
   </style>
 </head>
+
 <body>
   <div class="panel panel-info">
-    <div class = "panel-heading">
-      <span class = "panel-title">Web Application Information</span>
+    <div class="panel-heading">
+      <span class="panel-title">Web Application Information</span>
     </div>
-    <div class = "panel-body" id="info">
+    <div class="panel-body" id="info">
     </div>
   </div>
   <div class="panel panel-info">
-    <div class = "panel-heading">
-      <span class = "panel-title">Demo Ctrl Panel</span>
+    <div class="panel-heading">
+      <span class="panel-title">Demo Ctrl Panel</span>
     </div>
-    <div class = "panel-body" id="info">
+    <div class="panel-body" id="info">
       <div>
-          <label>GSheet Id for Demos</label>
-          <input type="text" style="width:400px" id="gsheetid"></input>
-          <input type="button" value="submit" id="submit"></input>
+        <label>GSheet Id for Demos</label>
+        <input type="text" style="width:400px" id="gsheetid"></input>
+        <input type="button" value="submit" id="submit"></input>
       </div>
     </div>
   </div>
@@ -47,8 +47,8 @@
   </div>
 </body>
 <script>
-  (function(d3,$){
-    d3.json("/myadmin/token", function(err,d){
+  (function(d3, $) {
+    d3.json("/myadmin/token", function(d) {
       console.log(d)
       var keys = Object.keys(d).sort()
       d3.select(info).html(
@@ -56,27 +56,30 @@
       )
     })
 
-    $("#stop").click(function(){
+    $("#stop").click(function() {
       var v = prompt("Stop this applcation? Please type stop.")
       console.log(v)
-      if (v=="stop") {
+      if (v == "stop") {
         //$.get("/myadmin/cmd/stop")
       }
     })
-    $("#submit").click(function(){
+    $("#submit").click(function() {
       $.ajax({
-        type:"POST",
-        url :"/myadmin/cmd/getdemo",
-        data :{sheetid:$("#gsheetid").val()},
-        success: function(json,d,e){
-          console.log("success",json,d,e)
+        type: "POST",
+        url: "/myadmin/cmd/getdemo",
+        data: {
+          sheetid: $("#gsheetid").val()
         },
-        error: function(){
+        success: function(json, d, e) {
+          console.log("success", json, d, e)
+        },
+        error: function() {
 
         }
       })
     })
 
-  })(d3,jQuery)
+  })(d3, jQuery)
 </script>
+
 </html>
